# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
#

2005-03-23 20:25:24 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-25

    Summary:
      xml, now schema deals with the empty element case
    Revision:
      itools--main--0.8--patch-25

    For example "<owner></owner>".
    
    Though the solution is probably not the best one.

    modified files:
     Changelog xml/Schema.py


2005-03-23 19:18:23 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-24

    Summary:
      xml, first draft of the new schema
    Revision:
      itools--main--0.8--patch-24

    The new schema classes take advantage of the new parsing process.

    modified files:
     Changelog xml/Schema.py


2005-03-23 17:47:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-23

    Summary:
      xml, make xhtml translation to work again
    Revision:
      itools--main--0.8--patch-23

    Remove dependecies on the disappeared 'Raw' class. Use 'to_unicode' in
    'i18n.segment'.

    modified files:
     Changelog i18n/segment.py xml/XHTML.py


2005-03-23 17:08:45 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-22

    Summary:
      merge from the 0.7 branch
    Revision:
      itools--main--0.8--patch-22

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.7--patch-58
       get ready to release 0.7.4
    
     * jdavid@itaapy.com--public/itools--main--0.7--patch-59
       documentation, fix makefile
    
     * jdavid@itaapy.com--public/itools--main--0.7--patch-60
       packaging, include "doc/task_tracker.eps"
    
     * jdavid@itaapy.com--public/itools--main--0.7--patch-61
       catalog, fix 'unindex_term'
    

    modified files:
     CHANGES.txt Changelog MANIFEST.in README.txt catalog/IIndex.py
     doc/Makefile

    new patches:
     jdavid@itaapy.com--public/itools--main--0.7--patch-58
     jdavid@itaapy.com--public/itools--main--0.7--patch-59